# igreja-ibm

./: .dockerignore  .gitignore  DOKKU_SCALE  Dockerfile  Makefile  Procfile  docker-compose.yaml  manage.py  mkdocs.yml  newrelic.ini  pyproject.toml  requirements.txt  setup.cfg  update-packages.py
.github/workflows/: ci.yaml  dokku.yml
docs/: index.md
docs/api/: settings.md
docs/api/apps/account/: index.md
docs/api/apps/core/: utils.md
igreja/: asgi.py  settings.py  urls.py  wsgi.py
igreja/apps/account/: admin.py  apps.py  enum.py  managers.py  models.py
igreja/apps/account/migrations/: 0001_initial.py  0002_remove_profile_biography_profile_about_and_more.py  0003_profile_new_events_alerts_profile_new_posts_alerts_and_more.py
igreja/apps/account/tests/: conftest.py  test_user_manager.py
igreja/apps/account/tests/factories/: user_factories.py
igreja/apps/church/: admin.py  apps.py  models.py
igreja/apps/church/migrations/: 0001_initial.py  0002_alter_church_code_alter_churchministry_code_and_more.py
igreja/apps/core/: apps.py  context.py  middleware.py  views.py
igreja/apps/core/forms/: form_base.py
igreja/apps/core/templates/core/: base.html  js-assets.html  navbar.html  style-assets.html
igreja/apps/core/templates/core/content/: content_base.html
igreja/apps/core/templates/core/nav/: header.html
igreja/apps/core/tests/: conftest.py
igreja/apps/core/types/: pages.py
igreja/apps/core/utils/: mail.py  redirect.py  utils.py
igreja/apps/core/views/: ajax_base_view.py
igreja/apps/web/: apps.py  urls.py
igreja/apps/web/static/web/css/: style.css  theme.css
igreja/apps/web/static/web/js/: main.js
igreja/apps/web/templates/: 404.html
igreja/apps/web/templates/base/: base.html  footer.html  js-assets.html  messages.html  style-assets.html
igreja/apps/web/templates/base/content/: content_base.html
igreja/apps/web/templates/base/nav/: header.html
igreja/apps/web/templates/registration/: create.html  login.html
igreja/apps/web/templates/web/: index.html
igreja/apps/web/templates/web/pages/: index.html  profile.html
igreja/apps/web/templates/web/pages/accounts/: create.html
igreja/apps/web/templates/web/saved-pages/: index.html
igreja/apps/web/views/: accounts.py  base_views.py  home.py
igreja/apps/web/views/accounts/: accounts.py  forms.py
igreja/apps/web/views/profiles/: forms.py  views.py
igreja/scripts/: create_user.py
igreja/tests/: conftest.py  settings.py  test_settings.py
igreja_ibm/: asgi.py  settings.py  urls.py  wsgi.py
igreja_ibm/scripts/: create_user.py
scripts/: deploy.sh  entrypoint.sh
