[tool.poetry]
name = "igreja-ibm"
version = "0.1.0"
description = ""
authors = ["Danilo Nascimento <daconnas.dcn@gmail.com>"]
readme = "README.md"
packages = [{include = "igreja"}]

[tool.black]
line-length = 80
target-version = [ "py39",]
include = "\\.pyi?$"


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
gunicorn = "^20.1.0"
django-model-utils = "^4.3.1"
django-extensions = "^3.2.1"
requests = "^2.28.2"
pillow = "^9.4.0"
psycopg2 = "^2.9.5"
dj-database-url = "^1.2.0"
python-decouple = "^3.7"
newrelic = "^8.6.0"
django-ckeditor = "^6.5.1"
django-ordered-model = "^3.6"
django-import-export = "^3.0.2"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.1"
mkdocs-pdf-export-plugin = "^0.5.10"
mkdocs-minify-plugin = "^0.6.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-macros-plugin = "^0.7.0"
jinja2 = "^3.1.2"

[tool.poetry.group.prod.dependencies]
django-model-utils = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
